feat: add DEAL_ID and TASK_INDEX to TeeSessionEnvironmentVariable (#496)